--- a/css/main.css
+++ b/css/main.css
@@ -116,16 +116,6 @@ button {
   }
 }
 
-.sub-page-header {
-  height: 180px;
-  background: #efefef;
-}
-@media screen and (min-width: 768px) {
-  .sub-page-header {
-    height: 410px;
-  }
-}
-
 /*=============================
 ナビゲーション
 =============================*/
@@ -306,14 +296,24 @@ button {
   padding-top: 0.3rem;
 }
 
-.page-title {
+.sub-page__title {
+  background-color: rgb(239, 239, 239);
+  height: 140px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.sub-page__title h1 {
   font-size: 36px;
-  position: absolute;
-  top: 100px;
-  left: 30px;
 }
 @media screen and (min-width: 768px) {
-  .page-title {
+  .sub-page__title {
     font-size: 100px;
     top: 220px;
     left: 80px;
@@ -1267,6 +1267,7 @@ p img {
 }
 .about-page .greeting__txt {
   margin-bottom: 14px;
+  text-align: justify;
 }
 @media screen and (min-width: 768px) {
   .about-page .greeting__txt {
