--- a/sass/common/_global.scss
+++ b/sass/common/_global.scss
@@ -117,16 +117,16 @@ button {
 }
 
 // *************************** sub-page-header ***************************
-.sub-page-header {
-  // width: 390px;
-  height: 180px;
-  background: #efefef;
-  // background-color: #ff0000;
+// .sub-page-header {
+//   // width: 390px;
+//   height: 180px;
+//   background: #efefef;
+//   // background-color: #ff0000;
 
-  @include mq(pc) {
-    height: 410px;
-  }
-}
+//   @include mq(pc) {
+//     height: 410px;
+//   }
+// }
 
 /*=============================
 ナビゲーション
@@ -270,12 +270,17 @@ button {
   padding-top: 0.3rem;
 }
 
-// *************************** ページタイトル ***************************
-.page-title {
-  font-size: 36px;
-  position: absolute;
-  top: 100px;
-  left: 30px;
+// *************************** サブページタイトル ***************************
+.sub-page__title {
+  background-color: rgb(239, 239, 239);
+  height: 140px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  h1 {
+    font-size: 36px;
+  }
 
   @include mq(pc) {
     font-size: 100px;
