refactor: aboutページsectionの::after調整

--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -99,7 +99,7 @@
       position: absolute;
       left: 0;
       bottom: 0;
-      height: 1px;
+      height: .5px;
       width: 100%;
       background-color: #000;
       // bottom: 0;
