--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -14,9 +14,7 @@
   .greeting__inner {
     padding-left: 30px;
     padding-right: 30px;
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
+
     @include mq(pc) {
       padding-left: 60px;
       padding-right: 60px;
@@ -53,7 +51,7 @@
 // *************************** company ***************************
   .company {
     padding-top: 63px;
-    margin-bottom: 120px;
+    padding-bottom: 120px;
     @include mq(pc) {
       padding-top: 100px;
     }
@@ -92,7 +90,6 @@
   }
 
   .company__item {
-    // width: inherit;
     position: relative;
     &::after {
       content: "";
@@ -102,13 +99,11 @@
       height: .5px;
       width: 100%;
       background-color: #000;
-      // bottom: 0;
     }
   }
 
   dl {
     display: flex;
-    // gap: 60px;
   }
 
   dt {
