--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -440,31 +440,50 @@ p {
   }
 }
 
+// .method__images {
+//   display: flex;
+//   position: relative;
+
+//   height: 280px;
+//   max-width: 403px;
+
+//   @include mq(pc) {
+//     width: 49%;
+//     // min-width: 476px;
+//   }
+// }
+
 .method__images {
-  display: flex;
-  position: relative;
-
-  height: 280px;
-  max-width: 403px;
-
-  @include mq(pc) {
-    width: 49%;
-    // min-width: 476px;
-  }
+  height: 300px;
+  width: 100%;
 }
 
+
+
+
+
 .method__img--01 {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 49.5%;
+  width: 100%;
+  object-fit: cover;
+
+  // filter: grayscale(100%);
+
+  // position: absolute;
+  // bottom: 0;
+  // left: 0;
+  // width: 49.5%;
 }
 
 .method__img--02 {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 49.5%;
+  width: 100%;
+  object-fit: cover;
+
+  // filter: grayscale(100%);
+
+  // position: absolute;
+  // top: 0;
+  // right: 0;
+  // width: 49.5%;
 }
 
 .method__wrapper2 {
