--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ html {
   /* clampの設定に対する警告は無視してOK */
   font-size: 16px;
   font-size: 62.5%;
-  font-size: clamp(14px, 2vw, 16px);
+  font-size: clamp(14px, 2vw, 18px);
 }
 
 body {
@@ -13,7 +13,7 @@ body {
   color: #333;
   font-family: "Noto Sans JP", sans-serif;
   background-color: #FFFFFF;
-  letter-spacing: 0.05em;
+  letter-spacing: 0.07em;
 }
 @media screen and (min-width: 768px) {
   body {
@@ -338,7 +338,7 @@ button {
 }
 
 .section-title {
-  font-size: 30px;
+  font-size: 42px;
   font-family: "Noto Sans JP", sans-serif;
   font-weight: 300;
   line-height: 1;
@@ -658,16 +658,11 @@ p img {
   }
 }
 
-.works__title--wrapper {
-  border-top: 1.3px solid #000;
-  border-bottom: 1.3px solid #000;
-  padding: 30px 0;
-  padding-top: 30px;
-  padding-bottom: 25px;
-  margin-bottom: 40px;
+.section-title__wrapper {
+  margin-bottom: 16px;
 }
 @media screen and (min-width: 768px) {
-  .works__title--wrapper {
+  .section-title__wrapper {
     border-top: 2px solid #000;
     border-bottom: 2px solid #000;
     padding-top: 62px;
@@ -677,27 +672,23 @@ p img {
 }
 
 .works__title {
-  font-size: 28px;
-  text-align: center;
   margin-bottom: 12px;
 }
 @media screen and (min-width: 768px) {
   .works__title {
     margin-bottom: 16px;
     font-size: 52px;
-    text-align: center;
   }
 }
 
-.works__subtitle {
+.section__subtitle {
   font-family: "M PLUS Rounded 1c";
   font-size: 14px;
-  text-align: center;
   line-height: 1;
-  margin-bottom: 12px;
+  color: black;
 }
 @media screen and (min-width: 768px) {
-  .works__subtitle {
+  .section__subtitle {
     font-size: 24px;
     text-align: center;
   }
@@ -767,9 +758,6 @@ p img {
   line-height: 1.8;
   font-size: 18px;
   font-family: "shippori Mincho";
-}
-.works__not-vertical-writing p {
-  padding: 0 30px;
 }
 @media screen and (min-width: 768px) {
   .works__not-vertical-writing {
@@ -850,11 +838,7 @@ p img {
 }
 
 .method__title {
-  text-align: center;
-  padding: 30px 0;
-  border-top: 1.3px solid #000;
-  border-bottom: 1.3px solid #000;
-  margin-bottom: 36px;
+  margin-bottom: 12px;
 }
 @media screen and (min-width: 768px) {
   .method__title {
