--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -202,13 +202,8 @@ p {
   }
 }
 
-.works__title--wrapper {
-  border-top: 1.3px solid #000;
-  border-bottom: 1.3px solid #000;
-  padding: 30px 0;
-  padding-top: 30px;
-  padding-bottom: 25px;
-  margin-bottom: 40px;
+.section-title__wrapper {
+  margin-bottom: 16px;
 
   @include mq(pc) {
     border-top: 2px solid #000;
@@ -220,24 +215,19 @@ p {
 }
 
 .works__title {
-  font-size: 28px;
-  text-align: center;
   margin-bottom: 12px;
 
   @include mq(pc) {
     margin-bottom: 16px;
     font-size: 52px;
-    text-align: center;
   }
 }
 
-.works__subtitle {
+.section__subtitle {
   font-family: "M PLUS Rounded 1c";
   font-size: 14px;
-  // font-weight: 800;
-  text-align: center;
   line-height: 1;
-  margin-bottom: 12px;
+  color: black;
 
   @include mq(pc) {
     font-size: 24px;
@@ -296,10 +286,6 @@ p {
   font-size: 18px;
   font-family: "shippori Mincho";
   // color: #000;
-  p {
-    // font-weight: 600;
-    padding: 0 30px;
-  }
 
   @include mq(pc) {
     display: none;
@@ -380,15 +366,8 @@ p {
 }
 
 .method__title {
-  // font-size: 32px;
-  text-align: center;
-  padding: 30px 0;
-  border-top: 1.3px solid #000;
-  border-bottom: 1.3px solid #000;
-  margin-bottom: 36px;
-  // margin: 0 auto;
-  // margin-left: 24px;
-  // margin-right: 24px;
+  margin-bottom: 12px;
+
 
   @include mq(pc) {
     font-size: 58px;
