--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -339,8 +339,8 @@ p {
   text-align: justify;
 }
 
-// ---------- method ----------
-.method {
+// ---------- product ----------
+.product {
   // background: #F7F7F7;
   padding-top: 100px;
   padding-bottom: 100px;
@@ -351,7 +351,7 @@ p {
   }
 }
 
-.method__inner {
+.product__inner {
   @include mq(sp) {
     padding-left: 30px;
     padding-right: 30px;
@@ -365,8 +365,9 @@ p {
   }
 }
 
-.method__title {
+.product__title {
   margin-bottom: 12px;
+  text-indent: -3.5px;
 
 
   @include mq(pc) {
@@ -381,7 +382,7 @@ p {
   }
 }
 
-.method__wrapper1 {
+.product__wrapper1 {
   display: flex;
   flex-direction: column;
   margin-bottom: 40px;
@@ -398,7 +399,7 @@ p {
   }
 }
 
-.method__text {
+.product__text {
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -419,7 +420,7 @@ p {
   }
 }
 
-// .method__images {
+// .product__images {
 //   display: flex;
 //   position: relative;
 
@@ -432,7 +433,7 @@ p {
 //   }
 // }
 
-.method__images {
+.product__images {
   height: 300px;
   width: 100%;
 }
@@ -441,7 +442,7 @@ p {
 
 
 
-.method__img--01 {
+.product__img--01 {
   width: 100%;
   object-fit: cover;
 
@@ -453,7 +454,7 @@ p {
   // width: 49.5%;
 }
 
-.method__img--02 {
+.product__img--02 {
   width: 100%;
   object-fit: cover;
 
@@ -465,7 +466,7 @@ p {
   // width: 49.5%;
 }
 
-.method__wrapper2 {
+.product__wrapper2 {
   display: flex;
   flex-direction: column;
 
@@ -479,13 +480,13 @@ p {
   }
 }
 
-.method__img--03 {
+.product__img--03 {
   @include mq(pc) {
     width: 49%;
   }
 }
 
-.method__text--02 {
+.product__text--02 {
   p {
     margin-bottom: 18px;
     text-align: justify;
