--- a/sass/common/_global.scss
+++ b/sass/common/_global.scss
@@ -315,7 +315,7 @@ button {
 .section-title {
   font-size: 42px;
   font-family: $font-family-ja;
-  font-weight: 300;
+  font-weight: 600;
   line-height: 1;
   letter-spacing: 0.06em;
 }
@@ -393,7 +393,7 @@ button {
   gap: 0.2em;
 
   small {
-    font-size: 1rem;
+    font-size: .7rem;
     font-weight: 200;
   }
 
